<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Height converter</string>
	<string name="centimeters">Your Height in centimeters:</string>
	<string name="feet_inches">Your height in feet, inches:</string>
	<string name="feet">feet</string>
	<string name="inches">inch(es)</string>
	<string name="convert">Convert</string>
	<string name="change">Switch</string>
	<string name="about_txt">Copyright® Mahmoud Hossam, 2011.</string>
	<string name="back">Back to app</string>
	<string name="result">Result</string>
	<string name="about">About</string>
</resources>
