<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	xmlns:app="http://schemas.android.com/apk/res/com.github.mahmoudhossam.height"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/textView1"
		android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
		android:text="@string/centimeters" />

	<EditText android:id="@+id/editText1" android:layout_height="wrap_content"
		android:inputType="numberDecimal" android:layout_below="@+id/textView1"
		android:layout_centerHorizontal="true" android:layout_width="fill_parent" />

	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/textView2"
		android:layout_below="@+id/editText1" android:layout_alignParentLeft="true"
		android:layout_marginTop="5dp" android:text="@string/feet_inches" />

	<EditText android:id="@+id/editText2" android:layout_height="wrap_content"
		android:inputType="numberDecimal" android:layout_below="@+id/textView2"
		android:layout_width="50dp" android:enabled="false"
		android:layout_marginTop="2dp" />

	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/textView3"
		android:layout_alignBottom="@+id/editText2" android:layout_toRightOf="@+id/editText2"
		android:text="@string/feet" android:layout_marginTop="2dp" />

	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/textView4"
		android:layout_alignBottom="@+id/editText3" android:layout_toRightOf="@+id/editText3"
		android:text="@string/inches" android:layout_marginTop="2dp" />

	<EditText android:id="@+id/editText3" android:layout_height="wrap_content"
		android:inputType="numberDecimal" android:layout_alignTop="@+id/editText2"
		android:layout_centerHorizontal="true" android:layout_width="50dp"
		android:enabled="false" android:layout_marginTop="2dp" />

	<Button android:layout_height="wrap_content" android:text="@string/convert"
		android:layout_width="100dp" android:id="@+id/button1"
		android:onClick="onConvertClick" android:layout_below="@+id/editText3"
		android:layout_marginTop="50dp" android:layout_centerHorizontal="true" />

	<com.google.ads.AdView android:id="@+id/adView"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" ads:adUnitId="a14e7f2096688e2"
		ads:adSize="BANNER" android:layout_centerHorizontal="true"
		ads:loadAdOnCreate="true" />

</RelativeLayout>
